--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@
     padding:0;
     box-sizing: border-box;
 }
+:root{
+    --preto: #000000;
+    --rosa-claro: #ffdabf;
+    --rosa-médio:#fa9b9b;
+    --rosa-escuro: #e88087;
+    --roxo: #635063;
+    --bege: #f7f3d5;
+}
+header{
+        display: flex;
+        width: 100%;
+        background-color: var(--rosa-escuro);
+        padding: 1rem;
+        position: relative;
+        justify-content: flex;
+    }
