--- a/style.css
+++ b/style.css
@@ -19,3 +19,25 @@ header{
         position: relative;
         justify-content: flex;
     }
+    .search-bar {
+    display: flex;
+}
+.search-bar input {
+    padding: 8px;
+    border: none;
+    border-radius: 4px 0 0 4px;
+    outline: none;
+}
+
+.search-bar button {
+    padding: 8px 12px;
+    border: none;
+    background-color: #E9C46A; /* Dourado suave */
+    color: black;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
+
+.search-bar button:hover {
+    background-color: #D4A94E;
+}
