--- a/style.css
+++ b/style.css
@@ -17,10 +17,12 @@ header{
         background-color: var(--rosa-escuro);
         padding: 1rem;
         position: relative;
-        justify-content: flex;
+        justify-content: space-between;
+        gap: 20px 
     }
-    .search-bar {
+.search-bar {
     display: flex;
+    margin-left: 20px;
 }
 .search-bar input {
     padding: 8px;
