--- a/style.css
+++ b/style.css
@@ -43,3 +43,18 @@ header{
 .search-bar button:hover {
     background-color: var(--rosa-claro);
 }
+.container {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap;
+
+    width: 300px;   
+    height: 300px;  
+    background-color: var(--rosa-claro); 
+    border: 2px solid var(--rosa-médio);    
+    border-radius: 8px;
+     aspect-ratio: 1 / 1;
+}
