--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ header{
 
     width: 300px;   
     height: 300px;  
-    background-color: var(--rosa-claro); 
-    border: 2px solid var(--rosa-médio);    
+    background-color:var(--rosa-escuro) ; 
+    border: 2px solid var(--rosa-claro);    
     border-radius: 8px;
      aspect-ratio: 1 / 1;
 }
